<resources>
    <string name="app_name">RythuSeva Officer</string>
    <string name="version">1.1</string>
    <string name="title_home">RythuSeva Officer</string>
    <string name="title_mao_home">MAO Officer</string>
    <string name="title_mpeo_home">MPEO Officer</string>
    <string name="title_jd_home">JD Officer</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="enter_pwd">Please enter password</string>
    <string name="search_fertilizer">Search Fertilizer</string>
    <string name="nursurySearch">Nursury Search</string>
    <string name="no_data">No Data!…</string>
    <string name="Nurs_name">Nursery Name</string>
    <string name="price_avv">Price :</string>
    <string name="network">No network available please try again</string>
    <string name="wait">Please Wait!</string>
    <string name="try_again">Please Try Again...</string>
    <string name="failed">Login Failed! Please Try Again...</string>
    <string name="submit">SUBMIT</string>
    <string name="update_category">Updated Category Details...</string>
    <string name="otp_enter">Please enter the OTP</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="equipment">Equipment</string>
    <string name="weather">Weather</string>
    <string name="officers_info">Officers Info</string>
    <string name="seedsAvailable">Seeds available place </string>
    <string name="seedMe">Seeds available with me</string>
    <string name="nursery">Nursery</string>
    <string name="description">Description</string>
    <string-array name="type">
        <item>Select</item>
        <item>Government</item>
        <item>Government Subsidized</item>
        <item>CHC</item>
        <item>Individual/Private</item>
    </string-array>
    <string-array name="type_">
        <item>Select</item>
        <item>Govt</item>
        <item>CHC</item>
        <item>Manufacturer</item>
        <item>Individual/Private</item>
    </string-array>
    <string-array name="statusdetails">
        <item>Select</item>
        <item>Ready for Rent</item>
        <item>In maintenance</item>
        <item>Unavailable</item>
        <item>Damaged</item>
        <item>Need service and repair</item>
        <item>Rented to customer</item>
    </string-array>
    <string name="photo_failed">Photo Capturing failed, try again</string>
    <string name="gps_photo_failed">GPS &amp; Photo Capturing failed, try again</string>
    <string name="saved">Data saved successfully</string>
    <string name="deleted">Deleted Successfully</string>
    <string name="no_available">Data Not Available</string>
    <string name="wait_loading">Please Wait! Layout Loading...</string>
    <string name="no_network">No network available please try again</string>
    <string name="already_reg_">This Equipment is Already Booked by another User </string>
    <string name="booking_failed">Booking Failed! Please Try Again...</string>
    <string name="booking_success">Equipment Booking Success</string>
    <string name="booking">Please Wait! Booking Equipment...</string>
    <string name="find_equips">Please Wait! Server Hit For Equipments</string>
    <string name="enter_username">Please enter user name</string>
    <string name="enter_aadhaar">Please enter aadhaar id</string>
    <string name="enter_valid_aadhaar">Please enter valid aadhaar id</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_phone">Please enter correct phone number</string>
    <string name="enter_purpose">Please enter purpose</string>
    <string name="enter_start_date">Please enter start date</string>
    <string name="enter_end_date">Please enter end date</string>
    <string name="cap_gps">Please capture Gps</string>
    <string name="owner_details">Owner Details</string>
    <string name="owner_name">Owner Name :</string>
    <string name="equipment_name">Equipment Name :</string>
    <string name="barcode">Barcode :</string>
    <string name="equipment_rent">Rent :</string>
    <string name="status">Status</string>
    <string name="push_notification">Push notification</string>
    <string name="title_booking">Booking</string>
    <string name="key_missing">Key Missing...</string>
    <string name="already_ordered">You Already Ordered this Equipment</string>
    <string name="key_miss_onClickBookEquip">Key Missing in onClick_BookingEquipment_Book</string>
    <string name="gps_captures_success">Gps captured Successfully</string>
    <string name="str_name">Name : </string>
    <string name="aadhaar_id">Aadhaar Id</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="purpose">Purpose</string>
    <string name="end_date">End Date</string>
    <string name="pls_cap_gps">Capture GPS</string>
    <string name="book">Book</string>
    <string name="remarks">Remarks</string>
    <string name="equipments_availability">Corperative Equipments Availability</string>
    <string name="chc_equipments_availability">CHC Equipments Availability</string>
    <string name="gps_failed">GPS failed, try again</string>
    <string name="distance">Distance : </string>
    <string name="rent">Rent :</string>
    <string name="equip_is">Already This Equipment is </string>
    <string name="update">Updated!</string>
    <string name="updat">Update</string>
    <string name="gps">GPS</string>
    <string name="name_of_equipment">Name of Equipment</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="phone_does_not_contains_camera">Sorry, your phone does not contains camera!</string>
    <string name="failed_to_create_directory">Failed to create directory</string>
    <string name="meters">Meters</string>
    <string name="get_route">Getting Route</string>
    <string name="driving">driving</string>
    <string name="register">Register</string>
    <string name="update_categories">Update Categories</string>
    <string name="not_update_categories">Master not updated! Please try again... \n->Masters Update is available in SLIDE MENU (☰)</string>
    <string name="search_equipment">Equipment Search</string>
    <string name="cancel">CANCEL</string>
    <string name="apply">APPLY</string>
    <string name="details_book">Equipment Details</string>
    <string name="for_book">For Booking</string>
    <string name="s_no">Serial No :</string>
    <string name="rent_book">Rent : ₹</string>
    <string name="fetch_book">Fetching Address...</string>
    <string name="no_net">No Internet! Please Check...</string>
    <string name="eqp_name">Equipment Name</string>
    <string name="eqp_details">Equipment Details</string>
    <string name="process_to_book">Process To Booking</string>
    <string name="fill_details_for_booking">Fill Details For Booking</string>
    <string name="by_which_date">From Date:</string>
    <string name="no_of_hours_need">No of Hours Need?</string>
    <string name="which_date">Which Date You Need?</string>
    <string name="eq_cat">Select Equipment Category</string>
    <string name="eq_type">Select Equipment Type</string>
    <string name="mandal">Mandal/Muncipality</string>
    <string name="district">District</string>
    <string name="gp">GP/Ward</string>
    <string name="village">Village</string>
    <string name="fertilizers_name_av">Fertilizer Name :</string>
    <string name="price_plant">Price(per plant)</string>
    <string name="find_ferti">Please Wait! Server Hit For Fertilizers</string>
    <string name="ferti_details">Fertilizer Details</string>
    <string name="ferti_name">Fertilizer Name</string>
    <string name="fertilize_name">Fertilizer Name :</string>
    <string name="search_Nursery">Search Nursery</string>
    <string name="find_Nursery">Please Wait! Server Hit For Nursery</string>
    <string name="Nursery_details">Nursery Details</string>
    <string name="Nursery_name">Nursery Name :</string>
    <string name="search_seed">Search Seed</string>
    <string name="seed_cat">Select Seed Category</string>
    <string name="seed_availability">Seed Availability</string>
    <string name="title_activity_seed_booking_details">Seed Details</string>
    <string name="seed_details">Seed Details</string>
    <string name="seed_name">Seed Name</string>
    <string name="seeds_name">Seed Name :</string>
    <string name="plant_name">Plant Name :</string>
    <string name="price">Price (in kg)</string>
    <string name="nursery_price">Price (Each Pot)</string>
    <string name="district_">జిల్లా(District)</string>
    <string name="mandal_">మండల(Mandal)/మున్సిపాలిటీ(Muncipality)</string>
    <string name="btn_submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="Eng_Seed_Label">
        <item>Shop Name</item>
        <item>Licence Number</item>
        <item>Mobile Number</item>
        <item>Address</item>
        <item>Select Category</item>
        <item>Select Variety</item>
        <item>Quantity</item>
        <item>Price</item>
        <item>Image</item>
        <item>GPS</item>
    </string-array>
    <string-array name="Tel_Seed_Label">
        <item>షాప్ పేరు</item>
        <item>లైసెన్స్ సంఖ్య</item>
        <item>మొబైల్ సంఖ్య</item>
        <item>చిరునామా</item>
        <item>వర్గం ఎంచుకోండి</item>
        <item>వెరైటీ ఎంచుకోండి</item>
        <item>క్వాంటిటీ</item>
        <item>ధర</item>
        <item>చిత్రం</item>
        <item>జిపియస్</item>
    </string-array>
    <string name="seedRegistration">Seed Registration</string>
    <string name="farmerName">Farmer Name</string>
    <string name="selectSeed">Select Seeds Type</string>
    <string name="select_category">Select Category</string>
    <string name="select_variety">Select Variety</string>
    <string name="selectSeedtype">Select Sub Seed Type</string>
    <string name="shopName">Shop Name</string>
    <string name="panch">Panchayat/Ward</string>
    <string name="quality">Quantity (in kg)</string>
    <string name="number_of_pots">Quantity(No.of.pots)</string>
    <string name="no_of_pots">no of pots</string>
    <string name="count">Count </string>
    <string name="del_ques">Do you want to Delete?</string>
    <string name="shop">Shop</string>
    <string name="farmer">Farmer</string>
    <string name="take_gps">Please Take GPS</string>
    <string name="myloc">My Location</string>
    <string name="please_wait_submitting">Please Wait! Submitting...</string>
    <string name="submit_suceess">Submitted Successfully</string>
    <string name="not_submit">Data not Submitted</string>
    <string name="all_equpments">All Equipments</string>
    <string name="date_weather">Date</string>
    <string name="temperature">Temperature</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind</string>
    <string name="nodataavaialbepleasetryagain">No Data available \n Please try again</string>
    <string name="weather_report">Weather Report</string>
    <string name="menu_booking_tracker">Booking Tracker</string>
    <string name="menu_capacity_building">Capacity Building</string>
    <string name="menu_near_fertilizers">Nearby Fertilizers</string>
    <string name="menu_near_seeds">Nearby Seeds</string>
    <string name="menu_near_nurseries">Nearby Nurseries</string>
    <string name="nav_my_villages">My Villages</string>
    <string name="select_village">Select Village</string>
    <string name="select_district">Select District</string>
    <string name="select_farmer">Select Farmer</string>
    <string name="select_mandal">Select Mandal</string>
    <string name="menu_farmer_awareness">Farmer Awareness Camp</string>
    <string name="menu_masterupdate">Master Update</string>
</resources>