<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Base.Green.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.Base.Green.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bnr_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


          <android.support.v7.widget.CardView
              android:id="@+id/card_view"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_margin="10dp"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="8dp"
              android:elevation="5dp"
              android:alpha="0.9"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              card_view:cardCornerRadius="5dp">

              <ScrollView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="10dp">

                  <TextView
                      android:id="@+id/tv_distsel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/district"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnerdist"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/select_district" />

                  <TextView
                      android:id="@+id/tv_malsel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:text="@string/mandal"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnerMandal"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/select_mandal" />

                  <TextView
                      android:id="@+id/gpselectiontype"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:text="@string/village"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnergp"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/select_village" />

                  <TextView
                      android:id="@+id/tv_farmers"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:text="@string/farmer"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnerFarmers"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/select_farmer" />

                  <TextView
                      android:id="@+id/tv_spinnertype"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:text="@string/selectSeed"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnerType"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/selectSeed" />

                  <TextView
                      android:id="@+id/tv_spinnersubtype"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:text="@string/selectSeedtype"
                      android:textColor="@color/colorAccent" />

                  <nk.mobileapps.spinnerlib.SearchableSpinner
                      android:id="@+id/spinnerSubType"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="4dp"
                      android:layout_marginEnd="1dp"
                      android:layout_marginRight="1dp"
                      android:layout_weight="1"
                      android:background="@drawable/spinner_bg1"
                      app:hintText="@string/selectSeedtype" />

                  <android.support.design.widget.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp">

                      <EditText
                          android:id="@+id/et_quantity"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:digits="0123456789"
                          android:hint="@string/quality"
                          android:inputType="number"
                          android:maxLength="10" />

                  </android.support.design.widget.TextInputLayout>

                  <android.support.design.widget.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp">

                      <EditText
                          android:id="@+id/et_price"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/price"
                          android:inputType="number"
                          android:maxLength="10" />

                  </android.support.design.widget.TextInputLayout>

                  <LinearLayout
                      android:layout_width="200dp"
                      android:layout_height="150dp"
                      android:layout_gravity="center"
                      android:layout_marginTop="10dp"
                      android:orientation="vertical">

                      <ImageView
                          android:id="@+id/img"
                          android:layout_width="match_parent"
                          android:layout_height="130dp"
                          android:layout_gravity="center"
                          android:onClick="captureImage"
                          android:src="@android:drawable/ic_menu_camera" />

                      <TextView
                          android:id="@+id/gps"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:text="@string/gps"
                          android:textSize="13sp" />

                  </LinearLayout>

                  <Button
                      android:id="@+id/bt_register"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="10dp"
                      android:layout_marginBottom="10dp"
                      android:clickable="true"
                      android:onClick="register"
                      android:text="@string/register"
                      android:textColor="#fff" />

                  <Button
                      android:id="@+id/btn_update"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="10dp"
                      android:layout_marginBottom="10dp"
                      android:clickable="true"
                      android:onClick="onClickUpdate"
                      android:text="@string/updat"
                      android:textColor="#fff"
                      android:visibility="gone" />


              </LinearLayout>

              </ScrollView>


          </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>