<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    card_view:cardCornerRadius="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_typeFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:tag="0"
                android:text="@string/search_seed"
                android:textAlignment="inherit"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Spinner
                android:id="@+id/sp_me_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/spinner_bg"
                android:entries="@array/type"
                android:padding="5dp"
                android:tag="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="@color/colorAccent"
                android:singleLine="true"
                android:text="@string/selectSeed"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"  />

            <nk.mobileapps.spinnerlib.SearchableSpinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                card_view:hintText="@string/seed_cat"
                android:padding="5dp"
                android:tag="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:text="@string/selectSeedtype"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <nk.mobileapps.spinnerlib.SearchableSpinner
                android:id="@+id/sp_subtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                card_view:hintText="@string/seed_cat"
                android:padding="5dp"
                android:tag="0" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_margin="1dp"

                    android:clickable="true"
                    android:onClick="onClick_Cancel"

                    android:text="@string/cancel"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"

                    android:clickable="true"
                    android:onClick="onClick_Apply"

                    android:text="@string/apply"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</android.support.v7.widget.CardView>
